--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"  xmlns:http="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <title>NewHouseWeb</title>
@@ -16,6 +16,10 @@
   <!-- Core Style CSS -->
   <link rel="stylesheet" href="assets/css/core-style.css">
   <link rel="stylesheet" href="assets/style.css">
+  <!-- Toastr -->
+  <link rel="stylesheet" href="assets/toastr/toastr.min.css">
+  <script src="assets/sweetalert2/sweetalert2.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
@@ -28,5 +32,8 @@
   <script src="assets/js/plugins.js"></script>
   <!-- Active js -->
   <script src="assets/js/active.js"></script>
+  <script src="assets/sweetalert2/sweetalert2.min.js"></script>
+  <script src="assets/toastr/toastr.min.js"></script>
+
 </body>
 </html>
