--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,12 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="assets/dist/css/adminlte.min.css">
 
+  <link rel="stylesheet" type="text/css" href="assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="assets/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="assets/plugins/OwlCarousel2-2.2.1/animate.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles/main_styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles/responsive.css">
+
 </head>
 <body>
   <app-root></app-root>
@@ -68,6 +74,13 @@
   <!-- AdminLTE App -->
   <script src="assets/dist/js/adminlte.min.js"></script>
 
+  <script src="assets/js/jquery-3.2.1.min.js"></script>
+  <script src="assets/styles/bootstrap4/popper.js"></script>
+  <script src="assets/styles/bootstrap4/bootstrap.min.js"></script>
+  <script src="assets/plugins/Isotope/isotope.pkgd.min.js"></script>
+  <script src="assets/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+  <script src="assets/plugins/easing/easing.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 </body>
 </html>
